--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
         }
 
         .flip-card-back {
-            background-color: var(--hover-background);
-            color: var(--text-color);
+            background-color: #cccccc;
+            color: #000000;
             transform: rotateY(180deg);
         }
 
